[gd_scene load_steps=36 format=2]

[ext_resource path="res://Assets/Sprites/ghostOrange_down2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/ghostOrange_right2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/ghostOrange_down1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/ghostRed_up2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/ghostRed_up1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/ghostRed_right2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/ghostOrange_left2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/ghostOrange_left1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/ghostOrange_right1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/ghostRed_right1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/ghostPink_left2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/ghostPink_down1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/ghostPink_up1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/ghostPink_right1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/ghostRed_down2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/ghostRed_left1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/ghostRed_left2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/ghostPink_up2.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/ghostPink_down2.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/ghostRed_down1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/ghostPink_right2.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/ghostPink_left1.png" type="Texture" id=22]
[ext_resource path="res://Screens/Play Screens/Maze Game/Ghost.gd" type="Script" id=23]
[ext_resource path="res://Assets/Sprites/ghostBlue_down2.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/ghostBlue_down1.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/ghostBlue_left1.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/ghostBlue_left2.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/ghostBlue_up2.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/ghostBlue_right2.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/ghostOrange_up1.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/ghostOrange_up2.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/ghostBlue_up1.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sprites/ghostBlue_right1.png" type="Texture" id=33]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 6 ) ],
"loop": true,
"name": "red_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 19 ) ],
"loop": true,
"name": "pink_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 15 ) ],
"loop": true,
"name": "red_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "orange_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 2 ) ],
"loop": true,
"name": "orange_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "red_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "orange_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 29 ) ],
"loop": true,
"name": "blue_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 11 ) ],
"loop": true,
"name": "pink_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 18 ) ],
"loop": true,
"name": "pink_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 21 ) ],
"loop": true,
"name": "pink_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "red_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 28 ) ],
"loop": true,
"name": "blue_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "orange_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 24 ) ],
"loop": true,
"name": "blue_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "blue_left",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 4.5 )

[node name="Ghost" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 23 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.3, 1.3 )
frames = SubResource( 1 )
animation = "red_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="UpRayCast" type="RayCast2D" parent="."]
cast_to = Vector2( 0, -16 )
collide_with_areas = true

[node name="LeftRayCast" type="RayCast2D" parent="."]
cast_to = Vector2( -16, 0 )
collide_with_areas = true

[node name="DownRayCast" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 16 )
collide_with_areas = true

[node name="RightRayCast" type="RayCast2D" parent="."]
cast_to = Vector2( 16, 0 )
collide_with_areas = true
